pridani komponenty Footer a provazani

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -136,3 +136,19 @@
     transform: rotate(0deg);
   }
 }
+
+.footer {
+  background-color: #B6ACBD;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin: 0;
+  height: 3rem;
+  text-align: center;
+  padding: 0;
+}
+
+.footer p {
+  color: rgb(77, 77, 77);
+  font-size: 0.8rem;
+}
