pridani page Setting

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -138,6 +138,9 @@
 }
 
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #B6ACBD;
   position: absolute;
   bottom: 0;
@@ -151,4 +154,5 @@
 .footer p {
   color: rgb(77, 77, 77);
   font-size: 0.8rem;
+  font-family: 'Krona One', sans-serif;
 }
