uprava page todolist

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -131,6 +131,16 @@
   bottom: 3rem;
 }
 
+/* Todo list */
+
+.taskmateTodo {
+  position: absolute;
+  bottom: 3rem;
+  left: 2rem;
+}
+
+/* Hamburger menu */
+
 .hamburgerMenu {
   position: absolute;
   top: 1rem;
