--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500&display=swap');
 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: 'Krona One';
+  --font-todolist: 'Inter', sans-serif;
 
   --background-color: #F1F9FF;
+  --color-purple: #b6acbd;
+  --color-lightblue: #F1F9FF;
+  --color-lightpurple: #F4EDF9;
+  --color-gray: #F3F3F3;
 }
 
 * {
@@ -27,24 +33,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #B6ACBD;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  margin: 0;
-  height: 3rem;
-  text-align: center;
-  padding: 0;
-}
-
-.footer p {
-  color: rgb(77, 77, 77);
-  font-size: 0.8rem;
-  font-family: 'Krona One', sans-serif;
 }
